fix anchor name

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <li>Maya</li>
         </ul>
         <h2>作品</h2>
-        <a href="https://vimeo.com/203766617"><img src="images/homehealthcare.jpg" alt="image of the home healthcare project" height="200"></a>
+        <a href="https://vimeo.com/203766617"><img src="images/homeHealthcare.jpg" alt="image of the home healthcare project" height="200"></a>
         <a href="https://www.youtube.com/watch?v=w7qciYfmbFA"></a><img src="images/sranipal.jpg" alt="image of the sranipal project" height="200"></a>
         <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s"><img src="images/srworks.jpg" alt="image of the srworks project" height="200"></a>
         <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s"><img src="images/whiizu.jpg" alt="image of the whiizu project" height="200"></a>
