summery and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <body>
         <h1>Renee CL  Chen</h1>
         <hr />
+        <h2>簡介</h2>
+            <p> 
+            我對於多媒體領域的充滿好奇，總是在想著「怎麼做」。<br />
+            在十年間，我從動畫製作出發、到成為資深遊戲工程師，到最近轉向網頁開發。<br />
+            喜歡學習與研究帶來的知識上的清淅、與完成工作的成就感。
+            </p>
         <h2>學歷</h2>
             <ul>
                 <li>
@@ -103,4 +109,7 @@
         <h2>聯絡我</h2>
         <p>chen.3140@osu.edu</p>
     </body>
+    <footer>
+        © Renee CL Chen 2024
+    </footer>
 </html>
