--- a/index.html
+++ b/index.html
@@ -17,56 +17,72 @@
         <h2>學歷</h2>
             <ul>
                 <li>
-                    俄亥俄州立大學<br/>
-                    動畫與互動媒體<br />
-                    Master of Fine Arts<br />
-                    2012/8-2016/5 
+                    俄亥俄州立大學
+                    <ul>
+                        <li>動畫與互動媒體</li>
+                        <li>Master of Fine Arts</li>
+                        <li>2012/8-2016/5 
+                    </ul>
                 </li>
                 <li>
-                    龍華科技大學<br/>
-                    多媒體與遊戲發展科學系<br />
-                    輔系：應用外語系<br />
-                    Bachelor of Science<br/>
-                    2008/9-2011/6
+                    龍華科技大學
+                    <ul>
+                        <li>多媒體與遊戲發展科學系</li>
+                            <li>輔系：應用外語系</li>
+                            <li>Bachelor of Science</li>
+                        <li>2008/9-2011/6
+                    </ul>
                 </li>
             </ul>
             <h2>工作資歷</h2>
             <ul>
                 <li>
-                    台灣碩網<br/>
-                    客戶端工程師<br />
-                    2022/9-2024/5．1年9個月<br />
-                    台北市南港區
+                    台灣碩網
+                    <ul>
+                        <li>客戶端工程師</li>
+                        <li>2022/9-2024/5．1年9個月</li>
+                        <li>台北市南港區</li>
+                    </ul>
                 </li>
                 <li>
-                    志合訊息<br/>
-                    資深工程師 </br/>
-                    2021/4-2022/9．1年6個月<br />
-                    台北市內湖區
+                    志合訊息
+                    <ul>
+                        <li>資深工程師</li>
+                        <li>2021/4-2022/9．1年6個月</li>
+                        <li>台北市內湖區
+                    </ul>
                 </li>
                 <li>
-                    美商安思特<br/>
-                    技術文編<br />
-                    2010/10-2021/1．4個月<br/>
-                    台北市中和區<br />
+                    美商安思特
+                    <ul>
+                        <li>技術文編</li>
+                        <li>2010/10-2021/1．4個月</li>
+                        <li>台北市中和區</li>
+                    </ul>
                 </li>
                 <li>
-                    宏達電<br/>
-                    資深工程師
-                    2017/8-2020/8．3年<br/>
-                    台北市新店區
+                    宏達電
+                    <ul>
+                        <li>資深工程師</li>
+                        <li>2017/8-2020/8．3年</li>
+                        <li>台北市新店區</li>
+                    </ul>
                 </li>
                 <li>
-                    Ohio Supercomputer Center<br/>
-                    Graduate Research Associate<br/>
-                    2014/1-2017/3．3年3個月<br />
-                    Columbus, Ohio
+                    Ohio Supercomputer Center
+                    <ul>
+                        <li>Graduate Research Associate</li>
+                        <li>2014/1-2017/3．3年3個月</li>
+                        <li>Columbus, Ohio</li>
+                    </ul>
                 </li>
                 <li>
-                    Advanced Computing Center for the Arts and Design<br/>
-                    Graduate Research Associate<br />
-                    2013/1-2013/12．1年<br />
-                    Columbus, Ohio
+                    Advanced Computing Center for the Arts and Design
+                    <ul>
+                        <li>Graduate Research Associate</li>
+                        <li>2013/1-2013/12．1年</li>
+                        <li>Columbus, Ohio</li>
+                    </ul>
                 </li>
             </ul>
         <h2>專長</h2>
