--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     <ul>
                         <li>動畫與互動媒體</li>
                         <li>Master of Fine Arts</li>
-                        <li>2012/8-2016/5 
+                        <li>2012/8-2016/5 </li>
+                        <li>Columbus, Ohio</li>
+                        <li>三年制，延畢一年</li>
                     </ul>
                 </li>
                 <li>
@@ -30,7 +32,8 @@
                         <li>多媒體與遊戲發展科學系</li>
                             <li>輔系：應用外語系</li>
                             <li>Bachelor of Science</li>
-                        <li>2008/9-2011/6
+                            <li>2008/9-2011/6</li>
+                            <li>桃園縣龜山鄉</li>
                     </ul>
                 </li>
             </ul>
@@ -114,6 +117,19 @@
             <li>AfterEffects</li>
             <li>3Ds Max</li>
             <li>Maya</li>
+        </ul>
+        <h2>語言</h2>
+        <ul>
+            <li>中文</li>
+            <ul>
+                <li>母語</li>
+            </ul>
+            <li>英文</li>
+            <ul>
+                <li>大學輔系為應用外語系</li>
+                <li>留美五年—碩士四年、OPT一年</li>
+                <li>雅思8分</li>
+            </ul>
         </ul>
         <h2>作品</h2>
         <a href="https://vimeo.com/203766617"><img src="images/homeHealthcare.jpg" alt="image of the home healthcare project" height="200"></a>
