--- a/index.html
+++ b/index.html
@@ -177,31 +177,31 @@
                     <a href="https://vimeo.com/203766617">
                         <img src="images/homeHealthcare.jpg" alt="image of the home healthcare project">
                     </a>
-                    <p>The Home Healthcare Project</p>
+                    <p>The Home Healthcare Project<br />2014-2017</p>
                 </div>
                 <div class="card sranipal">
                     <a href="https://www.youtube.com/watch?v=w7qciYfmbFA">
                         <img src="images/sranipal.jpg" alt="image of the sranipal project">
                     </a>
-                    <p>SRanipal</p>
+                    <p>SRanipal<br />2017-2020</p>
                 </div>
                 <div class="card srworks">
                     <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s">
                         <img src="images/srworks.jpg" alt="image of the srworks project">
                     </a>
-                    <p>SRWorks</p>
+                    <p>SRWorks<br />2017-2020</p>
                 </div>
                 <div class="card whiizu">
                     <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s">
                         <img src="images/whiizu.jpg" alt="image of the whiizu project">
                     </a>
-                    <p>WhiizU</p>
+                    <p>WhiizU<br />2021-2022</p>
                 </div>
                 <div class="card sma">
                     <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik">
                         <img src="images/sma.jpg" alt="image of the home sma project">
                     </a>
-                    <p>絢花百兵帖</p>
+                    <p>絢花百兵帖<br />2022-2024</p>
                 </div>
             </div>
         </div>
