--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>
                     我對於多媒體領域的充滿好奇，總是在想著「怎麼做」。<br />
                     在十年間，我從動畫製作出發、到成為資深遊戲工程師，到最近轉向網頁開發。<br />
-                    喜歡學習與研究帶來的知識上的清淅、與完成工作的成就感。
+                    喜歡學習與研究帶來的知識上的清晰、與完成工作的成就感。
                 </p>
             </div>
         </div>
@@ -176,32 +176,37 @@
                 <div class="card homehealthcare">
                     <a href="https://vimeo.com/203766617">
                         <img src="images/homeHealthcare.jpg" alt="image of the home healthcare project">
-                    </a>
-                    <p>The Home Healthcare Project<br />2014-2017</p>
+                    </a><br />
+                    The Home Healthcare Project<br />
+                    2014-2017<br />
                 </div>
                 <div class="card sranipal">
                     <a href="https://www.youtube.com/watch?v=w7qciYfmbFA">
                         <img src="images/sranipal.jpg" alt="image of the sranipal project">
-                    </a>
-                    <p>SRanipal<br />2017-2020</p>
+                    </a><br />
+                    SRanipal<br />
+                    2017-2020
                 </div>
                 <div class="card srworks">
                     <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s">
                         <img src="images/srworks.jpg" alt="image of the srworks project">
-                    </a>
-                    <p>SRWorks<br />2017-2020</p>
+                    </a><br />
+                    SRWorks<br />
+                    2017-2020
                 </div>
                 <div class="card whiizu">
                     <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s">
                         <img src="images/whiizu.jpg" alt="image of the whiizu project">
-                    </a>
-                    <p>WhiizU<br />2021-2022</p>
+                    </a><br />
+                    WhiizU<br />
+                    2021-2022
                 </div>
                 <div class="card sma">
                     <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik">
                         <img src="images/sma.jpg" alt="image of the home sma project">
-                    </a>
-                    <p>絢花百兵帖<br />2022-2024</p>
+                    </a><br />
+                    絢花百兵帖<br />
+                    2022-2024
                 </div>
             </div>
         </div>
