--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Master of Fine Arts
                     <ul>
                         <li>俄亥俄州立大學</li>
-                        <li>動畫與互動媒體</li>
+                        <li>主修：動畫與互動媒體</li>
                         <li>2012/8-2016/5 </li>
                         <li>Columbus, Ohio</li>
                     </ul>
@@ -41,8 +41,8 @@
                     Bachelor of Science
                     <ul>
                         <li>龍華科技大學</li>
-                        <li>多媒體與遊戲發展科學</li>
-                        <li>輔系應用外語系</li>
+                        <li>主修：多媒體與遊戲發展科學</li>
+                        <li>輔修：應用外語</li>
                         <li>2008/9-2011/6</li>
                         <li>桃園縣龜山鄉</li>
                     </ul>
