--- a/index.html
+++ b/index.html
@@ -14,205 +14,209 @@
     </head>
     <body>
         <h1>Renee CL  Chen</h1>
-        <div class="intro section">
-            <h2>簡介</h2>
-            <div class="card">
-                <img src="images/cat.png">    
-                <p>
-                    我對於多媒體領域的充滿好奇，總是在想著「怎麼做」。<br />
-                    在十年間，我從動畫製作出發、到成為資深遊戲工程師，到最近轉向網頁開發。<br />
-                    喜歡學習與研究帶來的知識上的清晰、與完成工作的成就感。
-                </p>
-            </div>
-        </div>
-        <div class="school section">
-            <h2>學歷</h2>
-            <div class="container">
+        <div class="grid">
+            <div class="intro section">
+                <h2>簡介</h2>
                 <div class="card">
-                    Master of Fine Arts
-                    <ul>
-                        <li>俄亥俄州立大學</li>
-                        <li>主修：動畫與互動媒體</li>
-                        <li>2012/8-2016/5 </li>
-                        <li>Columbus, Ohio</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    Bachelor of Science
-                    <ul>
-                        <li>龍華科技大學</li>
-                        <li>主修：多媒體與遊戲發展科學</li>
-                        <li>輔修：應用外語</li>
-                        <li>2008/9-2011/6</li>
-                        <li>桃園縣龜山鄉</li>
-                    </ul>
+                    <img src="images/cat.png">    
+                    <p>
+                        我對於多媒體領域的充滿好奇，總是在想著「怎麼做」。<br />
+                        在十年間，我從動畫製作出發、到成為資深遊戲工程師，到最近轉向網頁開發。<br />
+                        喜歡學習與研究帶來的知識上的清晰、與完成工作的成就感。
+                    </p>
                 </div>
             </div>
-        </div>
-
-        <div class="work section">
-            <h2>工作資歷</h2>
-            <div class="container">
-                <div class="card">
-                    台灣碩網
-                    <ul>
-                        <li>客戶端工程師</li>
-                        <li>2022/9-2024/5．1年9個月</li>
-                        <li>台北市南港區</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    志合訊息
-                    <ul>
-                        <li>資深工程師</li>
-                        <li>2021/4-2022/9．1年6個月</li>
-                        <li>台北市內湖區
-                    </ul>
-                </div>
-                <div class="card">
-                    美商安思特
-                    <ul>
-                        <li>技術文編</li>
-                        <li>2010/10-2021/1．4個月</li>
-                        <li>台北市中和區</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    宏達電
-                    <ul>
-                        <li>資深工程師</li>
-                        <li>2017/8-2020/8．3年</li>
-                        <li>台北市新店區</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    Ohio Supercomputer Center
-                    <ul>
-                        <li>Graduate Research Associate</li>
-                        <li>2014/1-2017/3．3年3個月</li>
-                        <li>Columbus, Ohio</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    Advanced Computing Center for the Arts and Design
-                    <ul>
-                        <li>Graduate Research Associate</li>
-                        <li>2013/1-2013/12．1年</li>
-                        <li>Columbus, Ohio</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-            
-        <div class="other section">
-            <h2>其它</h2>
-            <div class="container">
-                <div class="card">
-                    <h3>專長</h3>
-                    <ul>
-                        <li>Unity遊戲開發</li>
-                        <li>網頁開發</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>工具</h3>
-                    <ul>
-                        <li>Unity</li>
-                        <li>C#</li>
-                        <li>Shader</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascirpt</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>其它曾涉獵項目</h3>
-                    <ul>
-                        <li>素描</li>
-                        <li>平面設計</li>
-                        <li>3D動畫</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>其它曾使用工具</h3>
-                    <ul>
-                        <li>Unreal</li>
-                        <li>Illustrator</li>
-                        <li>Photoshop</li>
-                        <li>Premiere</li>
-                        <li>AfterEffects</li>
-                        <li>3Ds Max</li>
-                        <li>Maya</li>
-                        <li>Gimp</li>
-                        <li>Sphinx</li>
-                        <li>Jenkins</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>語言</h3>
-                    <ul>
-                        <li>中文</li>
+            <div class="school section">
+                <h2>學歷</h2>
+                <div class="container">
+                    <div class="card">
+                        Master of Fine Arts
                         <ul>
-                            <li>母語</li>
+                            <li>俄亥俄州立大學</li>
+                            <li>主修：動畫與互動媒體</li>
+                            <li>2012/8-2016/5 </li>
+                            <li>Columbus, Ohio</li>
                         </ul>
-                        <li>英文</li>
+                    </div>
+                    <div class="card">
+                        Bachelor of Science
                         <ul>
-                            <li>大學輔系為應用外語系</li>
-                            <li>留美5年</li>
-                            <li>雅思8分</li>
+                            <li>龍華科技大學</li>
+                            <li>主修：多媒體與遊戲發展科學</li>
+                            <li>輔修：應用外語</li>
+                            <li>2008/9-2011/6</li>
+                            <li>桃園縣龜山鄉</li>
                         </ul>
-                    </ul>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="work section">
+                <h2>工作資歷</h2>
+                <div class="container">
+                    <div class="card">
+                        台灣碩網
+                        <ul>
+                            <li>客戶端工程師</li>
+                            <li>2022/9-2024/5．1年9個月</li>
+                            <li>台北市南港區</li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        志合訊息
+                        <ul>
+                            <li>資深工程師</li>
+                            <li>2021/4-2022/9．1年6個月</li>
+                            <li>台北市內湖區
+                        </ul>
+                    </div>
+                    <div class="card">
+                        美商安思特
+                        <ul>
+                            <li>技術文編</li>
+                            <li>2010/10-2021/1．4個月</li>
+                            <li>台北市中和區</li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        宏達電
+                        <ul>
+                            <li>資深工程師</li>
+                            <li>2017/8-2020/8．3年</li>
+                            <li>台北市新店區</li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        Ohio Supercomputer Center
+                        <ul>
+                            <li>Graduate Research Associate</li>
+                            <li>2014/1-2017/3．3年3個月</li>
+                            <li>Columbus, Ohio</li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        Advanced Computing Center for the Arts and Design
+                        <ul>
+                            <li>Graduate Research Associate</li>
+                            <li>2013/1-2013/12．1年</li>
+                            <li>Columbus, Ohio</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+                
+            <div class="other section">
+                <h2>其它</h2>
+                <div class="container">
+                    <div class="card">
+                        <h3>專長</h3>
+                        <ul>
+                            <li>Unity遊戲開發</li>
+                            <li>網頁開發</li>
+                        </ul>
+                    </div>
 
-        <div class="projects section">
-            <h2>作品</h2>
-            <div class="container">
-                <div class="card homehealthcare">
-                    <a href="https://vimeo.com/203766617">
-                        <img src="images/homeHealthcare.jpg" alt="image of the home healthcare project">
-                    </a><br />
-                    The Home Healthcare Project<br />
-                    2014-2017<br />
-                </div>
-                <div class="card sranipal">
-                    <a href="https://www.youtube.com/watch?v=w7qciYfmbFA">
-                        <img src="images/sranipal.jpg" alt="image of the sranipal project">
-                    </a><br />
-                    SRanipal<br />
-                    2017-2020
-                </div>
-                <div class="card srworks">
-                    <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s">
-                        <img src="images/srworks.jpg" alt="image of the srworks project">
-                    </a><br />
-                    SRWorks<br />
-                    2017-2020
-                </div>
-                <div class="card whiizu">
-                    <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s">
-                        <img src="images/whiizu.jpg" alt="image of the whiizu project">
-                    </a><br />
-                    WhiizU<br />
-                    2021-2022
-                </div>
-                <div class="card sma">
-                    <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik">
-                        <img src="images/sma.jpg" alt="image of the home sma project">
-                    </a><br />
-                    絢花百兵帖<br />
-                    2022-2024
+                    <div class="card">
+                        <h3>工具</h3>
+                        <ul>
+                            <li>Unity</li>
+                            <li>C#</li>
+                            <li>Shader</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascirpt</li>
+                        </ul>
+                    </div>
+
+                    <div class="card">
+                        <h3>其它曾涉獵項目</h3>
+                        <ul>
+                            <li>素描</li>
+                            <li>平面設計</li>
+                            <li>3D動畫</li>
+                        </ul>
+                    </div>
+
+                    <div class="card">
+                        <h3>其它曾使用工具</h3>
+                        <ul>
+                            <li>Unreal</li>
+                            <li>Illustrator</li>
+                            <li>Photoshop</li>
+                            <li>Premiere</li>
+                            <li>AfterEffects</li>
+                            <li>3Ds Max</li>
+                            <li>Maya</li>
+                            <li>Gimp</li>
+                            <li>Sphinx</li>
+                            <li>Jenkins</li>
+                        </ul>
+                    </div>
+
+                    <div class="card">
+                        <h3>語言</h3>
+                        <ul>
+                            <li>中文</li>
+                            <ul>
+                                <li>母語</li>
+                            </ul>
+                            <li>英文</li>
+                            <ul>
+                                <li>大學輔系為應用外語系</li>
+                                <li>留美5年</li>
+                                <li>雅思8分</li>
+                            </ul>
+                        </ul>
+                    </div>
                 </div>
             </div>
+
+            <div class="projects section">
+                <h2>作品</h2>
+                <div class="container">
+                    <div class="card homehealthcare">
+                        <a href="https://vimeo.com/203766617">
+                            <img src="images/homeHealthcare.jpg" alt="image of the home healthcare project">
+                        </a><br />
+                        The Home Healthcare Project<br />
+                        2014-2017<br />
+                    </div>
+                    <div class="card sranipal">
+                        <a href="https://www.youtube.com/watch?v=w7qciYfmbFA">
+                            <img src="images/sranipal.jpg" alt="image of the sranipal project">
+                        </a><br />
+                        SRanipal<br />
+                        2017-2020
+                    </div>
+                    <div class="card srworks">
+                        <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s">
+                            <img src="images/srworks.jpg" alt="image of the srworks project">
+                        </a><br />
+                        SRWorks<br />
+                        2017-2020
+                    </div>
+                    <div class="card whiizu">
+                        <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s">
+                            <img src="images/whiizu.jpg" alt="image of the whiizu project">
+                        </a><br />
+                        WhiizU<br />
+                        2021-2022
+                    </div>
+                    <div class="card sma">
+                        <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik">
+                            <img src="images/sma.jpg" alt="image of the home sma project">
+                        </a><br />
+                        絢花百兵帖<br />
+                        2022-2024
+                    </div>
+                </div>
+            </div>
+            <div class="contact section">
+                <h2>聯絡我</h2>
+                    <svg width="16" height="16" fill="currentColor" class="bi bi-envelope-heart" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l3.235 1.94a2.8 2.8 0 0 0-.233 1.027L1 5.384v5.721l3.453-2.124q.219.416.55.835l-3.97 2.443A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741l-3.968-2.442q.33-.421.55-.836L15 11.105V5.383l-3.002 1.801a2.8 2.8 0 0 0-.233-1.026L15 4.217V4a1 1 0 0 0-1-1zm6 2.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132"/>
+                    </svg> <span>chen.3140@osu.edu</span>
+            </div>
         </div>
-        <h2><a href="about.html">關於我</a></h2>
-        <h2>聯絡我</h2>
-        <p>chen.3140@osu.edu</p>
     </body>
     <hr />
     <footer>
