--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
                 <h2>簡介</h2>
                 <div class="card">
                     <img src="images/cat.png">    
-                    <p>
-                        我對於多媒體領域的充滿好奇，總是在想著「怎麼做」。<br />
-                        在十年間，我從動畫製作出發、到成為資深遊戲工程師，到最近轉向網頁開發。<br />
-                        喜歡學習與研究帶來的知識上的清晰、與完成工作的成就感。
-                    </p>
+                    <p>我是一個充滿好奇心的人，總是在想著「怎麼做會更好」。</p>
+                    <p>學習與研究是我每天的生活。自2007年起至今，我從動畫製作出發、之後轉向程式遊戲、後來成為資深遊戲工程師、再到目前轉向網頁開發，都是不斷的學習帶來的成長與改變。</p>
+                    <p>在個人興趣方面也有所追求，從公路車運動入門後，我改練更加以技術為主的羽球。同時，我用心練習吉他、學習樂理，在一天一天對羽球技術、吉他演奏與樂理知識有更加的熟練與更多的認識的過程中，得到成就與滿足。</p>
+
                 </div>
             </div>
             <div class="school section">
