--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <li>俄亥俄州立大學</li>
                                 <li>主修：動畫與互動媒體</li>
                                 <li>2012/8-2016/5 </li>
-                                <li>Columbus, Ohio</li>
+                                <li>Columbus, Ohio, U.S.</li>
                             </ul>
                         </div>
                         <div class="col-12 col-sm-6 col-md-12">
@@ -115,7 +115,7 @@
                             <ul>
                                 <li>Graduate Research Associate</li>
                                 <li>2014/1-2017/3．3年3個月</li>
-                                <li>Columbus, Ohio</li>
+                                <li>Columbus, Ohio, U.S.</li>
                             </ul>
                         </div>
                         <div class="col-12">
@@ -123,7 +123,7 @@
                             <ul>
                                 <li>Graduate Research Associate</li>
                                 <li>2013/1-2013/12．1年</li>
-                                <li>Columbus, Ohio</li>
+                                <li>Columbus, Ohio, U.S.</li>
                             </ul>
                         </div>
                     </div>
