--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                                 <li>商城金流串接</li>
                                 <li>製作角色養成、戰鬥技能、新手教學等遊戲系統</li>
                                 <li>Jenkins自動化流程編輯串接</li>
+                                <li>Play Store、App Store包版上架</li>
                             </ul>
                         </div>
                     </div>
@@ -161,10 +162,7 @@
                         <div class="col-12 col-sm-6 col-md-12 col-lg-6">3D動畫
                             <ul>
                                 <li>素描、插畫、分鏡</li>
-                                <li>平面設計</li>
-                                    <ul>
-                                    <li>Illustrator</li>
-                                    </ul>
+                                <li>基本設計、色彩學</li>
                                 <li>建模、貼圖、骨架、動畫</li>
                                     <ul>
                                         <li>Photoshop、Gimp</li>
@@ -179,9 +177,15 @@
                                 </li>
                             </ul>
                         </div>  
-                        <div class="col-12 col-sm-6 col-md-12 col-lg-6">技術文件編寫
+                        <div class="col-12 col-sm-6 col-md-12 col-lg-6">
+                                技術文件編寫
                                 <ul>
                                     <li>Sphinx</li>
+                                </ul>
+                                版本控管
+                                <ul>
+                                    <li>Git</li>
+                                    <li>Sourcetree</li>
                                 </ul>
                         </div>
                     </div>
