--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <main>
             <div class="home-image">
-                <img src="images/homeImage.png" alt="home image"/>
+                <img src="images/homeImage.png" alt="home image">
             </div>
             <div class="container">
                 <div class="row g-2">
